examples/test/testpolicy10669.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10669
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key36: value4
      key35: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value47
          key33: value14
      podSelector:
        matchLabels:
          key10: value7
